--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -4,12 +4,13 @@
     display: flex; 
     justify-content: center; 
     align-items: center;
-    position: fixed;
+    position: fixed; /* Fijamos la posición sobre la pantalla */
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.6); /* Fondo oscuro y semitransparente */
+    width: 100vw; /* Ocupa todo el ancho de la pantalla */
+    height: 100vh; /* Ocupa toda la altura de la pantalla */
+    background-color: rgba(0, 0, 0, 0.3);
+    background-color: transparent; /* Fondo oscuro y semitransparente */
     z-index: 1000; /* Asegura que esté sobre otros elementos */
   }
   /* Estilos para el contenido del modal */
@@ -87,7 +88,7 @@
   /* Estilo para el enlace de registro */
 .register-text {
     margin: 25px 5px;
-    font-size: 1.5rem;
+    font-size: 1rem;
     color: #555;
     font-style:oblique;
 }
@@ -98,13 +99,13 @@
     text-shadow: 1px 1px #452929;
     text-decoration: none;
     padding-left: 20px;
-    font-size: 1.8rem;
+    font-size: 1.3rem;
     font-style: initial;
 }
   
 .register-link:hover {
   color: #60a8ce;
-  font-size: 2rem;
+  font-size: 1.8rem;
 }
   
 @keyframes slideDown {
