--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -1,6 +1,7 @@
 
 /* Estilos generales para el modal */
 .modal-overlay {
+   
     display: flex; 
     justify-content: center; 
     align-items: center;
@@ -9,16 +10,16 @@
     left: 0;
     width: 100vw; /* Ocupa todo el ancho de la pantalla */
     height: 100vh; /* Ocupa toda la altura de la pantalla */
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(52, 41, 41, 0.01);
     background-color: transparent; /* Fondo oscuro y semitransparente */
     z-index: 1000; /* Asegura que esté sobre otros elementos */
   }
   /* Estilos para el contenido del modal */
   .modal-content {
-    background-color: #f9f9f9;
+    background-color: #313030;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 16px rgba(177, 56, 56, 0.635);
     max-width: 400px;
     width: 90%;
     display: flex; flex-direction: column; 
@@ -38,6 +39,8 @@
     margin-top: 10px;
     margin-bottom: 5px;
     display: flex;
+    color:#ffff;
+    font-size: 1.1rem;
     
   }
   
