--- a/src/components/estilosDocumentacion.css
+++ b/src/components/estilosDocumentacion.css
@@ -1,4 +1,3 @@
-
   /* Estilos para el selector pequeño */
 .small-select {
     border: 1px solid #4e53e6;
@@ -53,7 +52,7 @@
       text-align: center; 
       border: 1px solid #4e53e6;
       box-shadow: 1px 1px #0342ed; } 
-.small-button:hover { background-color: #0056b3; }
+.small-button:hover { background-color: #b30051; }
 
   
 
