--- a/src/components/alerta.css
+++ b/src/components/alerta.css
@@ -1,20 +1,31 @@
-.alerta {
+.alert {
     padding: 10px;
     margin-bottom: 15px;
     border-radius: 5px;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: bold;
     text-align: center;
 }
 
-.alerta.success {
+.alert.success {
     background-color: #d4edda;
     color: #155724;
     border: 1px solid #c3e6cb;
 }
 
-.alerta.error {
+.alert.error {
     background-color: #f8d7da;
     color: #721c24;
     border: 1px solid #f5c6cb;
+}
+.alert.warning {
+    background-color: #fff3cd;
+    color: #856404;
+    border: 1px solid #ffeeba;
+}
+
+.alert.info {
+    background-color: #d1ecf1;
+    color: #0c5460;
+    border: 1px solid #bee5eb;
 }
