--- a/src/estilos/Modal.css
+++ b/src/estilos/Modal.css
@@ -1,4 +1,3 @@
-
 /* Estilos generales para el modal */
 .modal-overlay {
    
@@ -19,7 +18,7 @@
     background-color: #313030;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 2px 16px rgba(177, 56, 56, 0.635);
+    box-shadow: 0 2px 16px #ccc2c2;
     max-width: 400px;
     width: 90%;
     display: flex; flex-direction: column; 
@@ -35,8 +34,6 @@
   
   /* Estilos específicos para los elementos del modal */
   .login-box label, .register-box label{
-    font-weight: bold;
-    color: #333;
     margin-top: 10px;
     margin-bottom: 5px;
     display: flex;
@@ -44,32 +41,27 @@
     font-size: 1.1rem;
     
   }
- /*
-  .login-button {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;}
-    /* Otros estilos */
 
 .button .clip-loader {
   position: absolute;
 }
 .button {
-    color: white;
+    color: #000;
     border: none;
     border-radius: 5px;
     font-size: 1rem;
     cursor: pointer;
-    width: 100%;
+    width: auto;
     margin-top: 10px;
+    margin-left: 260px;
     padding: 10px;
     transition: background-color 0.3s ease;
-    background-color: #87CEEB;
+    background-color: #ccc2c2; 
   }
   
   .button:hover {
-    background-color: #2c66ef; /* Cambio de color al hacer hover */
+    color: #ffffff;
+    background-color: #87CEEB; 
   }
   .login-box input> span{ 
     position:'relative';
@@ -78,10 +70,19 @@
   }
 
   .back-button {
-    background-color: #424141;
+    position: relative; top: 10px; right: -180px;
+    background: none; 
+    border: none;
+    color: #ccc2c2;
+    font-size: 24px; /* Tamaño pequeño */ 
+    font-weight: bold;
+    cursor: pointer; 
+    transition: color 0.3s ease;
   } 
   .back-button:hover {
-  background-color: #2c66ef;
+    color: #87CEEB; 
+    background: none; 
+    border: none;
   } 
 
   /* Estilo para el enlace de registro */
@@ -94,8 +95,6 @@
   
 .register-link {
     color: #7db6cc;
-    font-weight: bold;
-    text-shadow: 1px 1px #452929;
     text-decoration: none;
     padding-left: 20px;
     font-size: 1.3rem;
@@ -103,21 +102,21 @@
 }
   
 .register-link:hover {
-  color: #2c66ef;
-  font-size: 1.8rem;
-  text-shadow: 1px 1px 10px #ae6969;
+  color: #ffffff;
+  text-shadow: 1px 1px 10px #ccc2c2;
 }
 
 @keyframes slideDown {
-    from {
+  from {
       transform: translateY(-20px);
       opacity: 0;
-    }
-    to {
+  }
+  to {
       transform: translateY(0);
       opacity: 1;
-    }
+  }
 }
+
   /* Ajustes responsivos */
 @media (max-width: 480px) {
    .modal-content {
