--- a/src/estilos/alerta.css
+++ b/src/estilos/alerta.css
@@ -7,24 +7,24 @@
     text-align: center;
 }
 
-.alert.success {
+.success {
     background-color: #d4edda;
     color: #155724;
     border: 1px solid #c3e6cb;
 }
 
-.alert.error {
+.error {
     background-color: #f8d7da;
     color: #721c24;
     border: 1px solid #f5c6cb;
 }
-.alert.warning {
+.warning {
     background-color: #fff3cd;
     color: #856404;
     border: 1px solid #ffeeba;
 }
 
-.alert.info {
+.info {
     background-color: #d1ecf1;
     color: #0c5460;
     border: 1px solid #bee5eb;
