--- a/src/estilos/slideImg.css
+++ b/src/estilos/slideImg.css
@@ -10,7 +10,7 @@
     color: #0d2363;
     font-size: 3rem;
     font-weight: bold;
-    text-shadow: 2px 2px 5px #d35400;; /* Sombra para destacar sobre imágenes */
+    text-shadow: 2px 2px 5px #313030; /* Sombra para destacar sobre imágenes */
     text-align: center;
 }
 .carousel-container {
