--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,11 @@ html {
     font-size: 16px; /* Tamaño base */
 }
 body{
-    margin:0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
-}
+    font-family: 'Roboto Slab', serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+}   
