--- a/proyectoCEIJA5/src/estilos/busquedaDNI.css
+++ b/proyectoCEIJA5/src/estilos/busquedaDNI.css
@@ -11,6 +11,7 @@
   width: 90%;
   max-width: 600px;
   margin: 20px auto;
+  position:relative;
 }
 
 /* Título */
@@ -102,4 +103,13 @@
   transform: scale(1.05); /* Efecto de zoom */
 }
 
-
+/* Contenedor de botones en la esquina superior derecha */
+.button-container-right {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  display: flex;
+  flex-direction: row;
+  gap: 10px; /* Espaciado entre los botones */
+  z-index: 10; /* Asegura que los botones estén encima de otros elementos */
+}
