--- a/proyectoCEIJA5/src/estilos/consultaEstd.css
+++ b/proyectoCEIJA5/src/estilos/consultaEstd.css
@@ -65,22 +65,26 @@
 
 /* Modal container */
 .modal-container {
-  background-color: #ccc2c2; /* Dark background for modal */
+  position: relative; /* Asegura que el botón "Cerrar" se posicione dentro del modal */
+  background-color: #ccc2c2; /* Fondo del modal */
   padding: 20px;
   border-radius: 10px;
   width: 80%;
   max-width: 600px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  position: relative;
 }
 
-/* Close button */
-.modal-close-button {
+.modal-close {
   position: absolute;
-  top: 10px;
-  right: 10px;
-  background: none;
-  border: none;
-  font-size: 1.5rem;
+  top: 30px; /* Posición desde la parte superior del modal */
+  right: 5px; /* Posición desde la parte derecha del modal */
+  font-size: 0.7rem;
+  font-weight: bold;
+  background: #2d4177;
+  color: #fff;
   cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+}
+.modal-close:hover {
+  color: #87ceeb;
 }
