--- a/proyectoCEIJA5/src/estilos/input.css
+++ b/proyectoCEIJA5/src/estilos/input.css
@@ -10,20 +10,28 @@
   margin-bottom: 0.5rem;
   font-weight: bold;
   color: #1976d2;
+  
 }
 
 .input-container input[type="text"],
 .input-container input[type="password"], /* Incluye inputs de tipo password */
 .input-container input[type="date"],
 .input-container select {
-  padding: 0.5rem;
+ /* padding: 0.5rem;
   border: 1px solid #ccc;
   border-radius: 4px;
-  width: 100%; /* Asegura que todos los inputs ocupen el mismo ancho */
-  font-size: 1rem; /* Tamaño uniforme de la fuente */
+  width: 100%; /* Asegura que todos los inputs ocupen el mismo ancho 
+  font-size: 1rem; /* Tamaño uniforme de la fuente 
   background: #fff;
   transition: border-color 0.2s, box-shadow 0.2s;
   box-sizing: border-box; /* Evita que el padding afecte el tamaño */
+  padding: 10px;
+  font-size: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  width: 90%;
+  background-color: #f9f9f9; /* Fondo claro */
+  box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.1); /* Sombra interna */
 }
 
 .input-container input[type="text"]:focus,
@@ -34,7 +42,11 @@
   outline: none;
   box-shadow: 0 0 0 2px #1976d233;
 }
-
+.form-group input::placeholder,
+.form-group select::placeholder {
+  color: #999;
+  font-style: italic;
+}
 .error-message {
   color: #d32f2f;
   font-style: italic;
