--- a/proyectoCEIJA5/src/estilos/listaEstudiantes.css
+++ b/proyectoCEIJA5/src/estilos/listaEstudiantes.css
@@ -10,6 +10,7 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra suave */
   color: #333; /* Texto oscuro */
   font-family: Arial, sans-serif;
+  position:relative;
 }
 
 /* Título */
